--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
   "author": "Eric Levine",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.90.0",
+    "body-parser": "^1.17.2",
+    "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
-    "nodemon": "^1.11.0"
+    "express-validator": "^3.2.1",
+    "nodemon": "^1.11.0",
+    "webpack": "^3.4.1"
   }
 }
